# ParsleyHaskell

./: .codeclimate.yml  .gitignore  Analyser.hs  Benchmarks.hs  ChangeLog.md  CodeGenerator.hs  CombinatorAST.hs  CombinatorAnalyser.hs  Compiler.hs  Defunc.hs  Fresh.hs  Identifiers.hs  Indexed.hs  Input.hs  InstructionAnalyser.hs  Instructions.hs  Machine.hs  MachineAST.hs  MachineAnalyser.hs  MachineOps.hs  Optimiser.hs  ParserAST.hs  Parsley.hs  Queue.hs  README.md  Utils.hs  Yoda.lhs  cabal.project  parsley.cabal
.github/workflows/: ci.yaml
Parsley/: Alternative.hs  Applicative.hs  Backend.hs  Combinator.hs  Common.hs  Core.hs  Fold.hs  Frontend.hs  Machine.hs  Precedence.hs  Register.hs  Selective.hs
Parsley/Backend/: CodeGenerator.hs  (+3 more)
benchmarks/: AttoparsecParsers.hs  Benchmarks.hs  CommonFunctions.hs  HappyParsers.y  MegaparsecParsers.hs  NativeParsers.hs  ParsecParsers.hs  ParsleyCharParsers.hs  ParsleyParsers.hs  ParsleyTokenParsers.hs  YodaParsers.hs
parsley/: ChangeLog.md  README.md  parsley.cabal
parsley-core/: ChangeLog.md  LICENSE  README.md  parsley-core.cabal
parsley-core/benchmarks/: BenchmarkUtils.hs  RangeSetBench.hs
parsley-core/src/ghc-8.10+/Parsley/Internal/Backend/: Machine.hs
parsley-core/src/ghc-8.10+/Parsley/Internal/Backend/Machine/: BindingOps.hs  Defunc.hs  ErrorOps.hs  Eval.hs  InputOps.hs  InputRep.hs  Offset.hs  Ops.hs  PosOps.hs  State.hs  Types.hs
parsley-core/src/ghc-8.10+/Parsley/Internal/Backend/Machine/Types/: Base.hs  Context.hs  Dynamics.hs  Errors.hs  Input.hs  Offset.hs  State.hs  Statics.hs
parsley-core/src/ghc-8.10+/Parsley/Internal/Backend/Machine/Types/Errors/: Defunc.hs  Defunc.hs-boot  ErrorItem.hs
parsley-core/src/ghc-8.10+/Parsley/Internal/Backend/Machine/Types/Input/: Offset.hs  Pos.hs
parsley-core/src/ghc-8.6+/Parsley/Internal/Backend/: Machine.hs
parsley-core/src/ghc-8.6+/Parsley/Internal/Backend/Machine/: Defunc.hs  Eval.hs  InputOps.hs  InputRep.hs  Ops.hs  State.hs  Types.hs
parsley-core/src/ghc-8.6+/Parsley/Internal/Backend/Machine/Types/: State.hs
parsley-core/src/ghc/Parsley/: Internal.hs
parsley-core/src/ghc/Parsley/Internal/: Backend.hs  Common.hs  Core.hs  Frontend.hs  Opt.hs  Trace.hs  Verbose.hs
parsley-core/src/ghc/Parsley/Internal/Backend/: Analysis.hs  CodeGenerator.hs  InstructionAnalyser.hs  Machine.hs  Optimiser.hs
parsley-core/src/ghc/Parsley/Internal/Backend/Analysis/: Coins.hs  Inliner.hs  Relevancy.hs
parsley-core/src/ghc/Parsley/Internal/Backend/Machine/: Defunc.hs  Eval.hs  Identifiers.hs  InputOps.hs  InputRep.hs  Instructions.hs  LetBindings.hs  LetRecBuilder.hs  THUtils.hs  Types.hs
parsley-core/src/ghc/Parsley/Internal/Backend/Machine/Types/: Base.hs  Coins.hs  Context.hs  InputCharacteristic.hs  State.hs  Statics.hs
parsley-core/src/ghc/Parsley/Internal/Common/: Fresh.hs  Indexed.hs  Queue.hs  QueueLike.hs  RangeSet.hs  RewindQueue.hs  State.hs  THUtils.hs  Utils.hs  Vec.hs
parsley-core/src/ghc/Parsley/Internal/Common/Queue/: Impl.hs
parsley-core/src/ghc/Parsley/Internal/Common/RewindQueue/: Impl.hs
parsley-core/src/ghc/Parsley/Internal/Core/: CharPred.hs  CombinatorAST.hs  Defunc.hs  Error.hs  Identifiers.hs  InputTypes.hs  Lam.hs  Primitives.hs  Result.hs
parsley-core/src/ghc/Parsley/Internal/Frontend/: Analysis.hs  CombinatorAnalyser.hs  Compiler.hs  Dependencies.hs  Optimiser.hs
parsley-core/src/ghc/Parsley/Internal/Frontend/Analysis/: Cut.hs  Dependencies.hs  Flags.hs  Inliner.hs
parsley-core/test/: CommonTest.hs  Primitive.hs  RegressionTest.hs  TestUtils.hs
parsley-core/test/CommonTest/: Queue.hs  RangeSet.hs  RewindQueue.hs
parsley-core/test/Primitive/: Parsers.hs
parsley-core/test/Regression/: Issue27.hs
parsley-tests-and-bench/: README.md  parsley-tests-and-bench.cabal
parsley/benchmarks/BrainfuckBench/: Main.hs  Shared.hs
parsley/benchmarks/BrainfuckBench/Attoparsec/: Parser.hs
parsley/benchmarks/BrainfuckBench/Handrolled/: Parser.hs
parsley/benchmarks/BrainfuckBench/Megaparsec/: Parser.hs
parsley/benchmarks/BrainfuckBench/Parsec/: Parser.hs
parsley/benchmarks/BrainfuckBench/Parsley/: Parser.hs
parsley/benchmarks/JavascriptBench/: Main.hs  Shared.hs
parsley/benchmarks/JavascriptBench/Attoparsec/: Parser.hs
parsley/benchmarks/JavascriptBench/Happy/: Parser.y
parsley/benchmarks/JavascriptBench/Megaparsec/: Parser.hs
parsley/benchmarks/JavascriptBench/Parsec/: Parser.hs
parsley/benchmarks/JavascriptBench/Parsley/: Parser.hs  String.hs  Text.hs
parsley/benchmarks/NandlangBench/: Main.hs
parsley/benchmarks/NandlangBench/Bison/: Nandlang.tab.c  Nandlang.tab.h  Nandlang.y  Parser.hs  lex.yy.c
parsley/benchmarks/NandlangBench/Parsley/: Functions.hs  Parser.hs
parsley/benchmarks/Shared/: BenchmarkUtils.hs
parsley/benchmarks/Shared/Attoparsec/: Extended.hs
parsley/benchmarks/Shared/Megaparsec/: Extended.hs
parsley/benchmarks/Shared/Parsec/: Extended.hs
parsley/src/ghc/: Parsley.hs
parsley/src/ghc-8.10+/Parsley/Internal/Backend/: Machine.hs
parsley/src/ghc/Parsley/: Alternative.hs  Applicative.hs  Char.hs  Combinator.hs  Debug.hs  Defunctionalized.hs  Fold.hs  InputExtras.hs  Internal.hs  ParserOps.hs  Patterns.hs  Precedence.hs  Register.hs  Selective.hs
parsley/src/ghc/Parsley/Internal/: Backend.hs  Common.hs  Frontend.hs  Verbose.hs
parsley/test/: ParsleyTest.hs  TestUtils.hs
parsley/test/Parsley/: Tests.hs
parsley/test/Parsley/Alternative/: Parsers.hs  Test.hs
parsley/test/Parsley/Applicative/: Parsers.hs  Test.hs
parsley/test/Parsley/Char/: Parsers.hs  Test.hs
parsley/test/Parsley/Combinator/: Parsers.hs  Test.hs
parsley/test/Parsley/Fold/: Parsers.hs  Test.hs
parsley/test/Parsley/Precedence/: Parsers.hs  Test.hs
parsley/test/Parsley/Primitive/: Parsers.hs  Test.hs
parsley/test/Parsley/Register/: Parsers.hs  Test.hs
parsley/test/Parsley/Regressions/: Parsers.hs  Test.hs
parsley/test/Parsley/Selective/: Parsers.hs  Test.hs
parsley/test/Regression/: Parsers.hs  Tests.hs
playground/: LinkedParsers.hs  Parsers.hs  Playground.hs
src/: Parsley.hs
test/: TestUtils.hs
(+170 files in other folders)
